# lite-series-upgrade

./: README.md  lite-series6-upgrade.py  lite_series_upgrade.py  pyproject.toml  setup.py
lite_series_upgrade/: __init__.py  apt_sources.py  versioning.py
tests/: test_apt_sources.py  test_versioning.py
